Deleting footer section and fix overflow issue.

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ body {
   text-align: center;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   width: 100%;
   align-items: center;
   min-height: 100vh;
@@ -206,62 +205,6 @@ main p {
   font-size: 14px;
   color: hsl(0, 0%, 59%);
   margin-top: 1.345rem;
-}
-
-.attribution {
-  font-size: 14px;
-  text-align: center;
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  top: 1%;
-  left: 1%;
-}
-
-.attribution img {
-  border-radius: 0.5rem;
-  width: 86px;
-  height: 86px;
-  box-shadow: rgba(36, 36, 36, 0.55) 0px 6px 42px 2px;
-  z-index: 99;
-  transition: all 0.215s ease-in;
-}
-
-.attribution a {
-  font-weight: 700;
-  text-decoration: none;
-  color: #8BC34A;
-  transition: 240ms ease-in;
-}
-
-.attribution a:hover {
-  font-size: 18px;
-  color: #d4894e;
-  transition: 240ms ease-in;
-}
-
-#footerPop {
-  background: hsl(217, 19%, 35%);
-  color: #d9ecf7;
-  display: inline-flex;
-  height: 86px;
-  padding: 0 18px;
-  border-radius: 0 0.5rem 0.5rem 0;
-  align-items: center;
-  position: relative;
-  opacity: 0;
-  transition: opacity 0.26s ease-in-out;
-}
-
-.attribution img:target  {
-  border-radius: 0.5rem 0 0 0.5rem;
-}
-
-#footerPop.show {
-  left: 0;
-  opacity: 1;
 }
 
 @media only screen and (max-width: 640px) {
